--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js\tictactoe.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js\tictactoe.js"></script>
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
