added status header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div class= "buttons">
-        <h1>Tic Tac Toe</h1>
-       <button id="new" type="button" name="new">New Game</button>
-    </div><br>
+      <h1>Tic Tac Toe</h1>
+      <button id="new" type="button" name="new">New Game</button>
+      <h2>It is X's turn.</h2>
+    </div>
     <div class="board">
 
     </div>
